--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -189,6 +189,21 @@ body {
                         display: none;
                     }
                 }
+
+                &:disabled {
+                    opacity: 0.4;
+                    border-color: #8d8d8d;
+                    cursor: auto;
+
+                    &:hover {
+                        background-color: transparent;
+                        transform: none;
+                    }
+
+                    svg path {
+                        fill: #8d8d8d;
+                    }
+                }
             }
 
             b {
